--- a/frontend/src/components/talento/MenuLateral.css
+++ b/frontend/src/components/talento/MenuLateral.css
@@ -38,13 +38,15 @@
 }
 
 .menu-item-active {
-  background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+  background-color: #257137;
   color: white;
   box-shadow: var(--shadow-md);
 }
 
 .menu-item-active:hover {
   transform: translateY(-2px);
+  color: white;
+  background-color: #26BC58;
 }
 
 .menu-icon {
