--- a/frontend/src/components/common/Header.css
+++ b/frontend/src/components/common/Header.css
@@ -89,8 +89,12 @@
   }
 
   .header-logo {
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
+    object-fit: contain;
+    max-width: 100vw;
+    max-height: 40px;
+    display: block;
   }
 
   .header-title {
