--- a/frontend/src/components/common/Toast.css
+++ b/frontend/src/components/common/Toast.css
@@ -15,8 +15,8 @@
 }
 
 .toast-success {
-  background: #257137;
-  border-left: 4px solid #26BC58;
+  background: #26BC58;
+  border-left: 4px solid #257137;
   color: white;
 }
 
