--- a/frontend/src/components/talento/MenuLateral.css
+++ b/frontend/src/components/talento/MenuLateral.css
@@ -38,7 +38,7 @@
 }
 
 .menu-item-active {
-  background-color: #257137;
+  background-color: #26BC58;
   color: white;
   box-shadow: var(--shadow-md);
 }
