chore: guardar cambios

--- a/frontend/src/components/common/Button.css
+++ b/frontend/src/components/common/Button.css
@@ -35,7 +35,7 @@
 }
 
 .btn-secondary {
-  background: transparent;
+  background: #26BC58;
   color: white;
   border: 2px solid white;
   box-shadow: none;
