--- a/frontend/src/components/asistente/PantallaExito.css
+++ b/frontend/src/components/asistente/PantallaExito.css
@@ -34,7 +34,7 @@
 
 .exito-title {
   font-size: 32px;
-  font-weight: 800;
+  font-weight: normal;
   background: #26BC58;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
